# colorchecker

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
apps/colorchecker_calibrator/: CMakeLists.txt  colorchecker_calibrator.cpp
apps/colorchecker_live/: CMakeLists.txt  colorchecker_live.cpp
cmake/: AppleHacks.cmake  BuildFlags.cmake  ConfigureBoost.cmake  ConfigureCUDA.cmake  ConfigureCeres.cmake  ConfigureEigen.cmake  ConfigureFlann.cmake  ConfigureG2O.cmake  ConfigureGFLAGS.cmake  ConfigureGLFW.cmake  ConfigureGLOG.cmake  ConfigureGLUT.cmake  ConfigureLibPNG.cmake  ConfigureNanoFlann.cmake  ConfigureOpenCTM.cmake  ConfigureOpenCV.cmake  ConfigureOpenMP.cmake  ConfigurePCL.cmake  ConfigurePython.cmake  ConfigureSIMD.cmake  ConfigureSuiteSparse.cmake  ConfigureX11.cmake  FindNumpy.cmake  FindSuiteSparse.cmake  ShowBuildSummary.cmake  ShowLibraryPaths.cmake  WindowsHacks.cmake
libs/color_calibration/: CMakeLists.txt  ColorCalibration.cpp  ColorCalibration.hpp  ContoursTest.cpp
libs/common/: .gitignore  ArrayPointer.hpp  BuildInfo.hpp  CMakeLists.txt  Chirality.hpp  CocaPointer.hpp  Compare.cpp  Compare.hpp  CompareTest.cpp  ContainerMath.cpp  ContainerMath.hpp  Debug.cpp  Debug.hpp  FloatingPointConstants.hpp  Hash.hpp  Json.cpp  Json.hpp  Logging.cpp  Logging.hpp  LoggingInit.cpp  LoggingInit.hpp  Math.hpp  Path.hpp  Profiler.cpp  Profiler.hpp  Random.hpp  RandomTests.cpp  ScopeExit.hpp  String.cpp  String.hpp  StringTest.cpp  Throw.cpp  Throw.hpp  Units.cpp  Units.hpp
libs/common/algorithm/: Array.hpp  Container.hpp  Iterator.hpp  Map.hpp  Range.hpp  Set.hpp  Vector.hpp
libs/file_io_toolbox/: CMakeLists.txt  FileIo.cpp  FileIo.hpp  FileSystem.cpp  FileSystem.hpp  TextFile.cpp  TextFile.hpp
libs/geometry_toolbox/: Angle.hpp  AngleTest.cpp  CMakeLists.txt  MetricEigen.cpp  MetricEigen.hpp  MetricOpenCv.cpp  MetricOpenCv.hpp  Types.hpp  Vector.hpp
libs/image_toolbox/: CMakeLists.txt  Color.cpp  Color.hpp  Contour.cpp  Contour.hpp  Convert.cpp  Convert.hpp  Gamma.cpp  Gamma.hpp  Image.hpp  ImageIo.cpp  ImageIo.hpp  ImageRotateTest.cpp  ImageToolboxTest.cpp  ImageTools.hpp  Magnitude.cpp  Magnitude.hpp  OpenCvTools.cpp  OpenCvTools.hpp  Reshape.cpp  Reshape.hpp  ShowImage.cpp  ShowImage.hpp  Tests.cpp  Tests.hpp  Visualization.cpp  Visualization.hpp
scripts/: build.sh  run_tests.sh
test/: CMakeLists.txt  main.cpp
test/teamcity/: teamcity_boost.cpp  teamcity_messages.cpp  teamcity_messages.h
test_files/: .gitignore
